--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
         font-family: 'Montserrat', 'Genova', 'Times new roman';
     }
 
-    #concerts1 {
+    .concerts1 {
         width: 49vw;
         height: 70px;
         overflow: hidden;
@@ -15,11 +15,11 @@
         margin-top: 10px;
         margin-bottom: 2px;
     }
-        #concerts1:hover{
+        .concerts1:hover{
             height: fit-content;
         }
 
-    #concerts2 {
+    .concerts2 {
         width: 49vw;
         height: 70px;
         overflow: hidden;
@@ -28,7 +28,7 @@
         margin-top: 2px;
         margin-bottom: 2px;
     } 
-        #concerts2:hover{
+        .concerts2:hover{
             height: fit-content;
         }
 
@@ -68,7 +68,7 @@
             font-family: 'Montserrat', 'Genova', 'Times new roman';
         }
         
-        #concerts1 {
+        .concerts1 {
             width: 49vw;
             height: 70px;
             overflow: hidden;
@@ -80,7 +80,7 @@
                 height: fit-content;
             }
         
-        #concerts2 {
+        .concerts2 {
             width: 49vw;
             height: 70px;
             overflow: hidden;
@@ -89,7 +89,7 @@
             margin-top: 2px;
             margin-bottom: 2px;
         } 
-            #concerts2:hover{
+            .concerts2:hover{
                 height: fit-content;
             }
         
